Prevent too wide descriptions

--- a/eagle/static/css/index.css
+++ b/eagle/static/css/index.css
@@ -101,7 +101,7 @@ body {
 .home-description {
     font-size: 16px;
     margin-left: 5vw;
-    max-width: 60vw;
+    max-width: 400px;
     min-height: 300px;
     padding: 7px;
 }
@@ -130,7 +130,7 @@ section {
 .section-description {
     font-size: 16px;
     margin-left: 50px;
-    max-width: 75vw;
+    max-width: 500px;
     min-height: 30vh;
     padding: 10px;
     padding-left: 12px;
